// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`submitAnonymousVote emits error when not registered 1`] = `
Array [
  Array [
    Object {
      "request": Object {
        "headers": Object {
          "cookie": Object {
            "passwordHash": "hashy",
          },
        },
        "user": Object {
          "_id": "123",
          "completedRegistration": false,
          "genfors": "1",
          "logged_in": true,
          "name": "Namy",
          "onlinewebId": "123",
          "permissions": 5,
        },
      },
    },
    "ADD_VOTE",
    Object {},
    Object {
      "error": "Du er ikke registert",
    },
  ],
]
`;

exports[`submitAnonymousVote emits error with insufficient permissions 1`] = `
Array [
  Array [
    Object {
      "request": Object {
        "headers": Object {
          "cookie": Object {
            "passwordHash": "hashy",
          },
        },
        "user": Object {
          "_id": "123",
          "completedRegistration": true,
          "genfors": "1",
          "logged_in": true,
          "name": "Namy",
          "onlinewebId": "123",
          "permissions": 0,
        },
      },
    },
    "ADD_VOTE",
    Object {},
    Object {
      "error": "User does not have the required permissions.",
    },
  ],
]
`;

exports[`submitAnonymousVote emits vote 1`] = `
Array [
  Array [
    Object {
      "request": Object {
        "headers": Object {
          "cookie": Object {
            "passwordHash": "hashy",
          },
        },
        "user": Object {
          "_id": "123",
          "completedRegistration": true,
          "genfors": "1",
          "logged_in": true,
          "name": "Namy",
          "onlinewebId": "123",
          "permissions": 5,
        },
      },
    },
    "ADD_VOTE",
    Object {
      "_id": undefined,
      "alternative": undefined,
      "question": undefined,
      "user": undefined,
    },
  ],
  Array [
    Object {
      "request": Object {
        "headers": Object {
          "cookie": Object {
            "passwordHash": "hashy",
          },
        },
        "user": Object {
          "_id": "123",
          "completedRegistration": true,
          "genfors": "1",
          "logged_in": true,
          "name": "Namy",
          "onlinewebId": "123",
          "permissions": 5,
        },
      },
    },
    "VOTED_STATE",
    Object {
      "voted": true,
    },
  ],
]
`;

exports[`submitRegularVote broadcasts vote 1`] = `
Array [
  Array [
    Object {
      "request": Object {
        "headers": Object {
          "cookie": Object {
            "passwordHash": "hashy",
          },
        },
        "user": Object {
          "_id": "123",
          "completedRegistration": true,
          "genfors": "1",
          "logged_in": true,
          "name": "Namy",
          "onlinewebId": "123",
          "permissions": 5,
        },
      },
    },
    "ADD_VOTE",
    Object {
      "_id": undefined,
      "alternative": undefined,
      "question": undefined,
      "user": undefined,
    },
  ],
]
`;

exports[`submitRegularVote emits error when not registered 1`] = `
Array [
  Array [
    Object {
      "request": Object {
        "headers": Object {
          "cookie": Object {
            "passwordHash": "hashy",
          },
        },
        "user": Object {
          "_id": "123",
          "completedRegistration": false,
          "genfors": "1",
          "logged_in": true,
          "name": "Namy",
          "onlinewebId": "123",
          "permissions": 5,
        },
      },
    },
    "ADD_VOTE",
    Object {},
    Object {
      "error": "Du er ikke registert",
    },
  ],
]
`;

exports[`submitRegularVote emits error with insufficient permissions 1`] = `
Array [
  Array [
    Object {
      "request": Object {
        "headers": Object {
          "cookie": Object {
            "passwordHash": "hashy",
          },
        },
        "user": Object {
          "_id": "123",
          "completedRegistration": true,
          "genfors": "1",
          "logged_in": true,
          "name": "Namy",
          "onlinewebId": "123",
          "permissions": 0,
        },
      },
    },
    "ADD_VOTE",
    Object {},
    Object {
      "error": "Storing vote failed.",
    },
  ],
]
`;

exports[`submitRegularVote emits vote 1`] = `
Array [
  Array [
    Object {
      "request": Object {
        "headers": Object {
          "cookie": Object {
            "passwordHash": "hashy",
          },
        },
        "user": Object {
          "_id": "123",
          "completedRegistration": true,
          "genfors": "1",
          "logged_in": true,
          "name": "Namy",
          "onlinewebId": "123",
          "permissions": 5,
        },
      },
    },
    "ADD_VOTE",
    Object {
      "_id": undefined,
      "alternative": undefined,
      "question": undefined,
      "user": undefined,
    },
  ],
  Array [
    Object {
      "request": Object {
        "headers": Object {
          "cookie": Object {
            "passwordHash": "hashy",
          },
        },
        "user": Object {
          "_id": "123",
          "completedRegistration": true,
          "genfors": "1",
          "logged_in": true,
          "name": "Namy",
          "onlinewebId": "123",
          "permissions": 5,
        },
      },
    },
    "VOTED_STATE",
    Object {
      "voted": true,
    },
  ],
]
`;
